# Parkinson-Diagnosis-Deeplearning

./: .gitignore  Dockerfile  Makefile  README.md  best_model.pt  docker-compose.yml  environment.yaml  pyproject.toml  requirements.txt
code/: data_utils.py  main.py  simpleMLP.py  train.py  train_utils.py  utils.py
data/: README.md
data/graph_embeddings/: embedding_0.csv  embedding_1.csv  embedding_10.csv  embedding_100.csv  embedding_101.csv  embedding_102.csv  embedding_103.csv  embedding_104.csv  embedding_105.csv  embedding_106.csv  embedding_107.csv  embedding_108.csv  embedding_109.csv  embedding_11.csv  embedding_110.csv  embedding_111.csv  embedding_112.csv  embedding_113.csv  embedding_114.csv  embedding_115.csv  embedding_116.csv  (+158 more)
notebooks/: 0_correlation_matrix.ipynb  0_reading.ipynb  1.0_correlation_matrix.ipynb  1.1_3classes.ipynb  1.2_2etapas.ipynb  1.3_catch22.ipynb  1.4_optuna.ipynb  1_cm_3c_2et_catch22.ipynb  1_cm_3classes.ipynb  1_corr_matrix_3c_2etapas.ipynb  1_corr_matrix_3classes.ipynb  1_correlation_matrix.ipynb  1_node2vec.ipynb  2.0_time_series.ipynb  2.1_3classes.ipynb  2.2_2etapas.ipynb  2.3_catch22.ipynb  2_pytorch.ipynb  2_time_series.ipynb  2_ts_3c_2et_catch22.ipynb  2_ts_3classes.ipynb  3.0_gnn.ipynb  3_gnn.ipynb  3_pure_timeseries.ipynb  3_timeseries.ipynb  3_timeseries_copy.ipynb  4.0_final.ipynb  4.0_laplacian.ipynb  4.0_multimodal.ipynb  4.1_laplacian.ipynb  4.2_2step.ipynb  4_laplacian.ipynb  4_laplacian_2step.ipynb  4_multiclassifier.ipynb  4_ts_3c_catch22.ipynb  4_ts_3classes.ipynb  5.0_final.ipynb  5.0_multimodal.ipynb  5.1_final.ipynb  5.1_laplacian.ipynb  (+4 more)
parkinson/: __init__.py
report/: refs.bib  report.md
weights/: best_model.pth
(+55 files in other folders)
