[project]
name = "Parkinson-Diagnosis-Deeplearning"
version = "1.0.0"
description = "Detecting Parkinson Disease through fMRI multivariate temporal series"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["parkinson", "parkinson.utils", "parkinson.NetworkModels"]


[project.urls]
Homepage = "https://github.com/TheoRiffel/Parkinson-Diagnosis-Deeplearning"
